# Changelog

## [1.0.0]
- Changed default palette from Sonic 2 to the SCH unified palette

## [0.0.7]
- Added changelog
- Better error reporting & enabled devtools (F12)
- Compression now based on flamewing's mdcomp
    - Uses WASM and is much faster
    - Added ArtC42, LZKN1, Rocket and RLE compression formats
- Sort imported spritesheet into rows properly
- Autodismiss new mapping screen
- Tabs can be maximized
- Sprite swapping keyboard shortcuts added